--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/client_menu.html.twig
@@ -32,7 +32,7 @@
             <a href="{{ path('artist_selection') }}">Artist selection</a>
         </li>
         <li>
-            Payments
+            <a href="{{ path('client_payments') }}">Payments</a>
         </li>
         <li>
             <a href="{{ path('feedbacks') }}">Feedback</a>
