--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client/artist_selection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client/artist_selection.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         {% include 'ActedLegalDocsBundle:Profile:client/client_menu.html.twig' %}
 
-        <div class="row artist-block" style="display: none;" v-for="order in orders">
+        <div class="row artist-block" style="display: none;" v-for="order in orders" v-bind:data-chatroom-id="order.chat.chat_id">
             <div class="col-sm-1 col-xs-1 no-pad avatar-block">
                 <div class="avatar">
                     <img v-if="order.artist.avatar" src="order.artist.avatar">
@@ -34,7 +34,7 @@
                         <div class="row color-kelly available-flag text-left" v-else-if="order.status == 1">Available</div>
                         <div class="row color-kelly available-flag text-left" v-else-if="order.status == 2">Confirmed</div>
                         <div class="row text-left price-from" v-if="order.status == 1">From &pound; ${order.minPrice}</div>
-                        <div class="row text-left"><i class="fa fa-trash"></i> Remove</div>
+                        <div class="row text-left"><i v-on:click="reject" class="fa fa-trash"></i> Remove</div>
                     </div>
                 </div>
 
