Update event address

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/client_event_details.html.twig
@@ -97,7 +97,7 @@
                           id="additional_info" placeholder="Put your comments here"></textarea>
             </div>
         </form>
-        <div class="col-md-6 col-sm-6 right_column">
+        <div class="col-md-6 col-sm-6 right_column" style="display: none">
             <div class="printer_icon">
                 <p style="visibility:hidden;">
                     <i class="fa fa-print" aria-hidden="true"></i>
